# nba-analytics

./: .gitattributes  .gitignore  README.md  docker-compose.yml  requirements-dev.txt
backend/: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 08394269f4ab_create_tables.py  37f40bca79eb_populate.py
backend/db-files/gamelog/: gamelog_2016_regular.csv
backend/db-files/teamstat/: teamstat_2016_regular_filled.csv
backend/nba_backend/: __init__.py  config.py  database.py  enums.py  gamelog_repository.py  teamstat_repository.py  user_repository.py
backend/nba_backend/api/: deps.py
backend/nba_backend/api/v1/: api.py  gamelogs.py  inference.py  teamstats.py  users.py
backend/nba_backend/exceptions/: __init__.py  nba_api_error.py
backend/nba_backend/inference/: base_mlp.py
backend/nba_backend/models/: __init__.py  apiclient.py  gamelog.py  teamstat.py  user.py
backend/nba_backend/schemas/: protocol.py
backend/nba_backend/utils/: database_utils.py  utils.py
backend/scripts/: format.sh
backend/tests/: conftest.py  test_api.py  test_database.py
backend/tests/fixture/: mock_response.py  send_request.py
cloud-formation/cfg-envs/: cfg.env
docker/: Dockerfile  Dockerfile.backend  docker-compose.yml
docker/script/: bootstrap.sh  entrypoint.sh  migrate.py  systemlibs.sh
docs/: command_line_notes.md
etl/nbaetl/nbaetl/: enums.py  utils.py
etl/nbaetl/nbaetl/transform/: __init__.py  transform_daystat.py  transform_gamelog.py  transform_training.py
etl/python-scripts/: run_get_daystat.py  run_get_gamelog.py  run_get_gamerotation.py  run_get_nba2k.py  run_get_training.py  run_transform.py
etl/script/: bootstrap.sh
notebooks/: experiment.ipynb
python-scripts/: run_get_training.py
training/: main.py
training/configs/: adam.yaml  adamw.yaml  base_mlp.yaml  sgd.yaml
training/nbadata/: training_2008_regular.csv
training/notebooks/: experiment.ipynb  train.ipynb
training/notebooks/nbadata/: training_2007_playoff.csv  training_2007_regular.csv  training_2008_playoff.csv  training_2009_playoff.csv  training_2009_regular.csv  training_2010_playoff.csv  training_2010_regular.csv  training_2011_playoff.csv  training_2011_regular.csv  training_2012_playoff.csv  training_2012_regular.csv  training_2013_playoff.csv  training_2013_regular.csv  training_2014_playoff.csv  training_2014_regular.csv  training_2015_playoff.csv  training_2015_regular.csv  training_2016_playoff.csv  training_2016_regular.csv  training_2017_playoff.csv  training_2017_regular.csv  training_2018_playoff.csv  training_2018_regular.csv  training_2019_playoff.csv  training_2019_regular.csv  training_2020_playoff.csv  training_2020_regular.csv  training_2021_playoff.csv  training_2021_regular.csv
training/src/: runner.py
training/src/data/: data.py
training/src/models/: __init__.py  base_mlp.py
